# ollama-python

./: .coveragerc  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  setup.py
.github/workflows/: python-publish.yml  python-test.yml
ollama_python/endpoints/: __init__.py  async_base_api.py  base.py  embedding.py  generate.py  model_management.py
ollama_python/models/: embedding.py  generate.py  model_management.py
tests/: test_embedding_endpoint.py  test_generate_endpoint.py  test_model_management_endpoint.py
tests/utils/: utils.py
