[tool.poetry]
name = "ollama-python"
version = "0.1.0"
description = ""
authors = ["Richard <kogunyale01@gmail.com>"]
readme = "README.md"
packages = [{include = "ollama_python"}]

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.26.0"
pre-commit = "^3.6.0"


[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
ruff = "^0.1.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
