[tool.poetry]
name = "ollama-python"
version = "0.1.2"
description = ""
authors = ["Richard <kogunyale01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.5.3"
requests = "^2.31.0"
httpx = "^0.26.0"
responses = "^0.24.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.13"
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
pre-commit = "^3.6.0"
black = "^23.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
